src/objects/jj_rb_Rebate_Contract_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>jj_rb_Contract_Price__c</fullName>
        <label>Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>jj_rb_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>jj_rb_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>jj_rb_Is_Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jj_rb_List_Price__c</fullName>
        <label>List/Wholesale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>jj_rb_Maximum_Volume__c</fullName>
        <label>Maximum Volume</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jj_rb_Minimum_Volume__c</fullName>
        <label>Minimum Volume</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jj_rb_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product</label>
        <referenceTo>jj_rb_Rebate_Product__c</referenceTo>
        <relationshipLabel>Rebate Contract Line Items</relationshipLabel>
        <relationshipName>Rebate_Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_Rebate_Contract__c</fullName>
        <label>Rebate Contract</label>
        <referenceTo>jj_rb_Rebate_Contract__c</referenceTo>
        <relationshipLabel>Rebate Contract Line Items</relationshipLabel>
        <relationshipName>Rebate_Contract_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>jj_rb_Rebate__c</fullName>
        <label>Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>jj_rb_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>jj_rb_Region__c</referenceTo>
        <relationshipLabel>Rebate Contract Line Items</relationshipLabel>
        <relationshipName>Rebate_Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>jj_rb_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Modified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Rebate Contract Line Item</label>
    <nameField>
        <displayFormat>RCLI-{0}</displayFormat>
        <label>Rebate Contract Line Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebate Contract Line Items</pluralLabel>
    <recordTypes>
        <fullName>jj_rb_Homecare_Contract</fullName>
        <active>true</active>
        <description>Use this to create a new Home care Provider contract line item</description>
        <label>Homecare Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>jj_rb_Homecare_closed_contract</fullName>
        <active>true</active>
        <label>Homecare Closed Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>jj_rb_Retailer_Closed_Contract</fullName>
        <active>true</active>
        <label>Retailer Closed Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>jj_rb_Retailer_Rebate_contract</fullName>
        <active>true</active>
        <description>Use this to create a new Retailer contract line item</description>
        <label>Retailer Contract</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>jj_rb_EndDt_greater_than_StartDt</fullName>
        <active>true</active>
        <description>End date should be greater than the start date</description>
        <errorConditionFormula>jj_rb_End_Date__c  &lt;=  jj_rb_Start_Date__c</errorConditionFormula>
        <errorMessage>End date should be greater than the start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>jj_rb_Listprice_greater_Contractprice</fullName>
        <active>true</active>
        <description>For Homecare contracts, the list price should be greater than the contract price in the line item.</description>
        <errorConditionFormula>AND(OR( RecordType.Name = &apos;Homecare Contract&apos;,RecordType.Name= &apos;Retailer Contract&apos;),jj_rb_Contract_Price__c &gt; jj_rb_List_Price__c)</errorConditionFormula>
        <errorMessage>List price should be greater than contract price.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>jj_rb_Rebate_Value_per_Unit</fullName>
        <active>true</active>
        <description>It Validates that the rebate value per unit is equal to the difference in list price and agreement price.</description>
        <errorConditionFormula>(jj_rb_Rebate__c   &lt;&gt; (jj_rb_List_Price__c  -  jj_rb_Contract_Price__c)) &amp;&amp;   RecordType.DeveloperName =&apos;jj_rb_Retailer_Rebate_contract&apos;</errorConditionFormula>
        <errorMessage>Rebate value should be the difference of List price and Contract price.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>jj_rb_minimum_less_maximum_value</fullName>
        <active>true</active>
        <description>Minimum Volume should be less than maximum  Volume</description>
        <errorConditionFormula>jj_rb_Minimum_Volume__c &gt; jj_rb_Maximum_Volume__c</errorConditionFormula>
        <errorMessage>Minimum Volume should be less than maximum  Volume</errorMessage>
    </validationRules>
</CustomObject>